# logos-chat-module

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  chat_module_interface.h  chat_module_plugin.cpp  chat_module_plugin.h  chatsdk_module_plugin.cpp  flake.nix  metadata.json
.github/workflows/: ci.yml  doctests.yml
docs/: ffi-tooling.md  use-the-chat-module-api-from-an-app.md
doctests/: chat-module-exchange.test.yaml  chat-module-group.test.yaml
master/: index.html
nix/: default.nix  include.nix  lib.nix
pr-36/: index.html
pr-37/: index.html
pr-40/: index.html
pr-41/: index.html
pr-42/: index.html
pr-43/: index.html
pr-44/: index.html
pr-45/: index.html
pr-46/: index.html
pr-47/: index.html
pr-48/: index.html
pr-49/: index.html
pr-50/: index.html
pr-51/: index.html
pr-52/: index.html
pr-53/: index.html
pr-54/: index.html
pr-55/: index.html
pr-56/: index.html
pr-57/: index.html
pr-58/: index.html
rust-lib/: Cargo.toml  chat_module.lidl
rust-lib/src/: actions.rs  delivery.rs  inbound.rs  lib.rs  logging.rs  mailbox.rs  module.rs  persistence.rs
src/: actions.rs  chat_module_plugin.cpp  chat_module_plugin.h  delivery.rs  events.rs  inbound.rs  lib.rs  module.rs  panic_hook.rs  persistence.rs
tests/: CMakeLists.txt  test_chat_module.cpp
tests/e2e/: README.md  _constants.py  _helpers.py  conftest.py  pytest.ini  requirements.txt  test_delivery_ack.py  test_lifecycle.py  test_two_users_chat.py
tests/e2e/libs/: constants.py  helpers.py
tests/integration/: README.md  _helpers.py  conftest.py  requirements.txt  test_two_users_chat.py
tests/integration/fixtures/: bootstrap-nodekey.txt  chat-a.json  chat-b.json
tests/mocks/: chat_module_events_stub.cpp  mock_liblogoschat.cpp
tests/stubs/lib/: liblogoschat.h
tools/mailbox-relay/: Cargo.toml  Dockerfile  README.md
tools/mailbox-relay/src/: lib.rs  main.rs  store.rs
tools/mailbox-relay/tests/: relay.rs
