[package]
name     = "chat_module"
version  = "0.3.0"
edition  = "2021"

[lib]
crate-type = ["staticlib"]

# Standalone crate. The empty table keeps cargo from adopting a workspace it
# finds in a parent directory. resolver = "3" matches libchat's workspace (its
# members are edition 2024, default resolver 3); aligning here avoids
# feature-unification drift between our build and libchat's standalone build.
[workspace]
resolver = "3"

# Panicking across the FFI boundary is UB; safer-ffi (transitive via libchat)
# requires abort. Cargo honours [profile.release] only on the resolution root,
# so libchat's own panic = "abort" is ignored when libchat is a dependency.
[profile.release]
panic = "abort"

[dependencies]
# libchat's high-level threaded client (package renamed `client` -> `logos-chat`).
# It owns the inbound worker that drives `Core::handle_payload` and surfaces
# observations as `Event`s on a channel the module drains.
# rev pins feat/groupv2-roster: the GroupV2 client surface this module's group
# ops need (create_group_conversation / add_group_members, injectable GroupV2
# timing), plus the group roster (`group_members`) and the honest DirectV1
# display class this module now surfaces. Drop the rev once it merges to main.
logos-chat     = { git = "https://github.com/logos-messaging/libchat.git", package = "logos-chat", rev = "6691ef1f2465f491205a02de3e08aeb60fda09ea" }
# The umbrella `libchat` crate, for `ChatStorage`: the builder's
# `storage_config` panics on a bad DB, so we build the store fallibly and pass it in.
libchat        = { git = "https://github.com/logos-messaging/libchat.git", package = "libchat", rev = "6691ef1f2465f491205a02de3e08aeb60fda09ea" }
# `TestLogosAccount` (gated behind logos-account's `dev` feature): the ephemeral
# account identity that signs this installation's device bundle and whose key is
# the shared account address. Enable `dev` on our own dep so its availability
# doesn't hinge on another crate happening to turn the feature on.
logos-account  = { git = "https://github.com/logos-messaging/libchat.git", package = "logos-account", features = ["dev"], rev = "6691ef1f2465f491205a02de3e08aeb60fda09ea" }
# The client hands back a `Receiver<Event>` and drains a `Receiver<Vec<u8>>`
# through its `Transport`, so the module's plumbing speaks the same channel type.
crossbeam-channel = "0.5"
# The runtime SDK, staged by the module builder (codegen.rust) at this path
# from the same logos-rust-sdk rev its generator came from, so the generated
# scaffold and the linked SDK never skew. The path is absent in a standalone
# checkout; build via `nix build .#chat_module`.
logos-rust-sdk = { path = "../logos-rust-sdk-src" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
# Hex-encodes the account verifying key as this installation's shared address,
# and the delegate device key into the account's signed device bundle.
hex            = "0.4"

# libchat's `crypto` crate is written for the xeddsa 1.0 API. Cargo's
# default SemVer resolution would pick 1.1.0 (released since), whose
# `Sign::sign` signature changed and no longer compiles against the
# `crypto` crate. Pin to 1.0.2 (libchat's own declared version) to keep
# the transitive build working.
xeddsa         = "=1.0.2"
