[package]
name     = "chat_module"
version  = "0.1.1"
edition  = "2021"

[lib]
crate-type = ["staticlib"]

# Standalone crate. The empty table keeps cargo from adopting a workspace it
# finds in a parent directory. resolver = "3" matches libchat's workspace (its
# members are edition 2024, default resolver 3); aligning here avoids
# feature-unification drift between our build and libchat's standalone build.
[workspace]
resolver = "3"

# Panicking across the FFI boundary is UB; safer-ffi (transitive via libchat)
# requires abort. Cargo honours [profile.release] only on the resolution root,
# so libchat's own panic = "abort" is ignored when libchat is a dependency.
[profile.release]
panic = "abort"

[dependencies]
# libchat's transport-generic threaded client (package `logos-generic-chat`).
# It owns the inbound worker that drives `Core::handle_payload` and surfaces
# observations as `Event`s on a channel the module drains. The module brings its own
# delivery (logoscore's delivery_module), so it depends on this transport-generic
# crate, not the `logos-chat` facade that bundles an embedded logos delivery.
# rev-pinned to libchat main at the merged GroupV2 rev (#167): the group ops this
# module needs (create_group_conversation / add_group_members, injectable GroupV2
# timing, the `group_members` roster, and the honest DirectV1 display class) are on
# main but not in a released libchat version yet.
logos-generic-chat = { git = "https://github.com/logos-messaging/libchat.git", package = "logos-generic-chat", rev = "e7e122b0cc3f696e38d82be0f883ac74cae157d8" }
# The umbrella `libchat` crate, for `ChatStorage`: the builder's
# `storage_config` panics on a bad DB, so we build the store fallibly and pass it in.
libchat        = { git = "https://github.com/logos-messaging/libchat.git", package = "libchat", rev = "e7e122b0cc3f696e38d82be0f883ac74cae157d8" }
# `TestLogosAccount` (gated behind logos-account's `dev` feature): the ephemeral
# account identity that signs this installation's device bundle and whose key is
# the shared account address. Enable `dev` on our own dep so its availability
# doesn't hinge on another crate happening to turn the feature on.
logos-account  = { git = "https://github.com/logos-messaging/libchat.git", package = "logos-account", features = ["dev"], rev = "e7e122b0cc3f696e38d82be0f883ac74cae157d8" }
# The client hands back a `Receiver<Event>` and drains a `Receiver<Vec<u8>>`
# through its `Transport`, so the module's plumbing speaks the same channel type.
crossbeam-channel = "0.5"
# The runtime SDK, staged by the module builder (codegen.rust) at this path
# from the same logos-rust-sdk rev its generator came from, so the generated
# scaffold and the linked SDK never skew. The path is absent in a standalone
# checkout; build via `nix build .#chat_module`.
logos-rust-sdk = { path = "../logos-rust-sdk-src" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
# Hex-encodes the account verifying key as this installation's shared address,
# and the delegate device key into the account's signed device bundle.
hex            = "0.4"

# libchat's `crypto` crate is written for the xeddsa 1.0 API. Cargo's
# default SemVer resolution would pick 1.1.0 (released since), whose
# `Sign::sign` signature changed and no longer compiles against the
# `crypto` crate. Pin to 1.0.2 (libchat's own declared version) to keep
# the transitive build working.
xeddsa         = "=1.0.2"
