[package]
name     = "chat_module"
version  = "0.2.0"
edition  = "2021"

[lib]
crate-type = ["staticlib"]

# Standalone crate. The empty table keeps cargo from adopting a workspace it
# finds in a parent directory. resolver = "3" matches libchat's workspace (its
# members are edition 2024, default resolver 3); aligning here avoids
# feature-unification drift between our build and libchat's standalone build.
[workspace]
resolver = "3"

# Panicking across the FFI boundary is UB; safer-ffi (transitive via libchat)
# requires abort. Cargo honours [profile.release] only on the resolution root,
# so libchat's own panic = "abort" is ignored when libchat is a dependency.
[profile.release]
panic = "abort"

[dependencies]
# libchat's transport-generic threaded client (package `logos-generic-chat`).
# It owns the inbound worker that drives `Core::handle_payload` and surfaces
# observations as `Event`s on a channel the module drains. The module brings its own
# delivery (logoscore's delivery_module), so it depends on this transport-generic
# crate, not the `logos-chat` facade that bundles an embedded logos delivery.
# rev-pinned to libchat's unreleased group name/description client surface: it
# adds a name and description to create_group_conversation and a group_metadata
# getter, which this module stores and surfaces as each conversation's name and
# description, on top of the GroupV2 group ops it already needs (add_group_members,
# the `group_members` roster, the Event::ConversationMembersChanged behind the
# `members_changed` contract event, injectable GroupV2 timing, the honest DirectV1
# display class). Not yet in a released libchat version.
logos-generic-chat = { git = "https://github.com/logos-messaging/libchat.git", package = "logos-generic-chat", rev = "0c51d4d0b8d83223a133a157e186f0b9a18527ca" }
# The umbrella `libchat` crate, for `ChatStorage`: the builder's
# `storage_config` panics on a bad DB, so we build the store fallibly and pass it in.
libchat        = { git = "https://github.com/logos-messaging/libchat.git", package = "libchat", rev = "0c51d4d0b8d83223a133a157e186f0b9a18527ca" }
# `TestLogosAccount` (gated behind logos-account's `dev` feature): the ephemeral
# account identity that signs this installation's device bundle and whose key is
# the shared account address. Enable `dev` on our own dep so its availability
# doesn't hinge on another crate happening to turn the feature on.
logos-account  = { git = "https://github.com/logos-messaging/libchat.git", package = "logos-account", features = ["dev"], rev = "0c51d4d0b8d83223a133a157e186f0b9a18527ca" }
# The client hands back a `Receiver<Event>` and drains a `Receiver<Vec<u8>>`
# through its `Transport`, so the module's plumbing speaks the same channel type.
crossbeam-channel = "0.5"
# The runtime SDK, staged by the module builder (codegen.rust) at this path
# from the same logos-rust-sdk rev its generator came from, so the generated
# scaffold and the linked SDK never skew. The path is absent in a standalone
# checkout; build via `nix build .#chat_module`.
logos-rust-sdk = { path = "../logos-rust-sdk-src" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
# The mailbox transport's HTTP client + payload encoding. reqwest 0.12 (blocking,
# rustls) matches HttpRegistry's config exactly, so cargo unifies to the single
# reqwest already in the tree instead of pulling a second TLS stack; base64 0.22
# matches the components crate. `default-features = false` is load-bearing — the
# default `native-tls` feature would add a redundant openssl TLS backend.
reqwest        = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64         = "0.22"
thiserror      = "2"
# Hex-encodes the account verifying key as this installation's shared address,
# and the delegate device key into the account's signed device bundle.
hex            = "0.4"

# libchat's `crypto` crate is written for the xeddsa 1.0 API. Cargo's
# default SemVer resolution would pick 1.1.0 (released since), whose
# `Sign::sign` signature changed and no longer compiles against the
# `crypto` crate. Pin to 1.0.2 (libchat's own declared version) to keep
# the transitive build working.
xeddsa         = "=1.0.2"
